--- a/presentation.qmd
+++ b/presentation.qmd
@@ -647,7 +647,7 @@ It relates to this question:
 
 *Do you think that transgender persons should be able to change their civil documents to match their inner gender identity?*
 
-We will take the values:
+It takes the values:
 
 -   1 for "Yes"
 
@@ -845,7 +845,6 @@ mice_imputed <- data.frame(
 
 ```
 
-
 ## Imputation
 
 ```{r}
@@ -869,7 +868,6 @@ for (i in 1:length(variables)) {
     theme_classic()
 }
 ```
-
 
 ```{r}
 #| echo: true
@@ -924,7 +922,6 @@ vif_values <- vif(test_model)
 
 ```
 
-
 ```{r}
 #| echo: true
 
@@ -937,6 +934,7 @@ summary(glm_model_2)
 ```
 
 ## 
+
 The model was clearly overfitted. And it suggested we have scaling issue. We fix this and move to remove the non-significant variables.
 
 ```{r}
@@ -956,9 +954,10 @@ summary(glm_model_4)
 library(stargazer)
 ```
 
-
 ## Model (stargazer)
+
 We compared a few models with different transformations and different variables and end up with the best model, to this one.
+
 ```{r}
 stargazer(glm_model_4, type = "text", title = "Results of GLMM Analysis", out = "model_results.html")
 
@@ -980,8 +979,6 @@ BIC(glm_model_4)
 
 -   **Political Ideology**: Conservative alignment correlates with less support for transgender individuals' rights to change civil documents, showing a 22.8% decrease in support.
 
--   **Religious Impact**: Catholic individuals show 21.2% less support, while Jewish individuals are slightly more supportive, though the latter is very small.
-
 ## Key Findings - Social and Economic Factors
 
 -   **Economic Stability**: Individuals with no difficulty paying bills are more supportive, linking economic security with supportive attitudes.
@@ -989,8 +986,6 @@ BIC(glm_model_4)
 -   **Contact with Transgender Individuals**: Lack of contact is associated with a 45.5% decrease in support, highlighting the importance of visibility and personal relationships.
 
 -   **Sexual Minority and Support**: Non-members of sexual minorities are less supportive of transgender rights for document changes.
-
--   **Country-Level Factors**: General support for a third gender option and awareness of discrimination correlate with supportive attitudes. 
 
 ## Conclusion
 
